# mdm-ddpo

./: .gitignore  MEMORY.md  README.md  export_ddpo.py  pyproject.toml  requirements.txt  reward_calibration_epsilon_linear50_minsnr5_150k.json  step_reward_k8_soft_huber_epsilon_linear50_minsnr5_150k.json  train_ddpo.py
mdm_ddpo/: __init__.py  calibration.py  config.py  count_conditioning.py  diffusion.py  experiments.py  lora.py  policy_diagnostics.py  policy_io.py  rewards.py  runtime.py  sft.py  step_calibration.py  step_data.py  step_diagnostics.py  step_probe.py  step_reward.py  tracking.py  trainer.py
reports/: counterfactual_number_probe_analysis.md  ddpo_mdm_compatibility_diagnostic.json  ddpo_mdm_compatibility_diagnostic.md  ddpo_mdm_epsilon_1000step_screen.json  ddpo_mdm_epsilon_200step_screen.json  ddpo_mdm_epsilon_compatibility_diagnostic.json  ddpo_mdm_epsilon_linear50_minsnr5_150k_diagnostic.json  ddpo_mdm_prediction_type_comparison.md  epsilon_count_sft_ddpo_comparison.json  epsilon_count_sft_ddpo_comparison.md  epsilon_count_sft_step_k8_short_analysis.json  epsilon_count_sft_step_k8_short_analysis.md  epsilon_linear50_minsnr5_150k_counterfactual_number_probe.json  epsilon_linear50_minsnr5_150k_evaluation.md  epsilon_linear50_minsnr5_150k_step_k8_short_analysis.json  epsilon_linear50_minsnr5_150k_step_k8_short_analysis.md  epsilon_linear50_minsnr5_150k_step_k8_short_counterfactual.json  k16_step_m2m_ablation_analysis.json  k16_step_m2m_ablation_analysis.md  step_k16_diagnosis.md
scripts/: preflight.sh  probe_step_counterfactual_checkpoints.sh  (+13 more)
(+30 files in other folders)
